# swl-tools

./: .gitignore  CLAUDE.md  DEV-GUIDE.md  README.md  USER-GUIDE.md  checksked.py  chksked  pyproject.toml  swl.py  updatesked.py  updsked
packaging/: swl.desktop
packaging/archlinux/: PKGBUILD
packaging/debian/: control  copyright
screenshots/: capture.py
src/eibi_swl/: _schedule.py  checksked.py  swl.py  swlconfig.conf.sample  updatesked.py
swl-schedules-data/: transmitter-sites.json
